--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -8,8 +8,16 @@
                 <h2 class="h4 card-title">Schedule:</h2>
                 <ul>
                     {% for section in site.html_pages %}{% if section.nav %}
-                    <li><a href="{{ section.url | relative_url }}">{% if section.nav == true %}{{ section.title }}{% else %}{{ section.nav }}{% endif %}</a> {% if section.topics %}<small>| topics: {{ section.topics }}</small>{% endif %}</li>
-                    {% endif %}{%- endfor -%}
+                    <li><a href="{{ section.url | relative_url }}">
+                        {{ section.title }}
+                    </a> 
+                    {% if section.time %}
+                        <small>| time: {{ section.topics }}</small>
+                        <small>| presenter: {{ section.presenter }}</small>
+                        {% endif %}
+                    </li>
+                    {% endif %}
+                    {%- endfor -%}
                 </ul>
             </div>
         </div>
