--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -12,7 +12,7 @@
                     <li><a href="{{ section.url | relative_url }}">
                         {{ section.title }}
                     </a> 
-                        <small>| time: {{ section.topics }}</small>
+                        <small>| time: {{ section.time }}</small>
                         <small>| presenter: {{ section.presenter }}</small>
                     </li>
                     {% endif %}
