--- a/_layouts/section.html
+++ b/_layouts/section.html
@@ -5,8 +5,16 @@ layout: page
 <h1>{{ page.title }}</h1>
 
 <div class="ms-5 mb-3 border-bottom">
-    {% if page.description %}<div class="">{{ page.description | markdownify }}</div>{%- endif -%}
-    {% if page.topics %}<div class="">{{ "Topics: <strong>" | append: page.topics | append: "</strong>" | markdownify }}</div>{%- endif -%}
+    {% if page.description %}
+    <div class="">
+        {{ page.description | markdownify }}
+    </div>
+    {%- endif -%}
+    {% if page.time %}
+    <div class="">
+        {{ "Time: <strong>" | append: page.time | append: "</strong>" | markdownify }}
+    </div>
+    {%- endif -%}
 </div>
     
 {% if page.youtubeid %}
