full width of card

--- a/_layouts/section.html
+++ b/_layouts/section.html
@@ -18,7 +18,7 @@ layout: page
 </div>
     
 {% if page.youtubeid %}
-<div class="w-100 text-center mb-4 border rounded p-2">
+<div class="text-center mb-4 border rounded p-2">
     <figure class="mb-0">
         <div class="ratio ratio-16x9">
             <iframe title="{{ page.title }} section video" src="https://www.youtube-nocookie.com/embed/{{ page.youtubeid }}?rel=0&modestbranding=1" allowfullscreen></iframe>
