--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -2,7 +2,7 @@
     Add an auto generated TOC based on the front matter of content pages 
 {% endcomment %}
 <div class="row justify-content-center">
-    <div class="m-3 col-md-8" >
+    <div class="m-3 col-12" >
         <div class="card">
             <div class="card-body">
                 <h2 class="h4 card-title">Schedule:</h2>
