--- a/_includes/template/footer.html
+++ b/_includes/template/footer.html
@@ -11,7 +11,7 @@
         <div id="footer-title" class="col-md">
           <a class="h5" href="{{ '/' | relative_url }}">{{ site.title }}</a>
           <br>
-          <a href="https://creativecommons.org/licenses/by-sa/4.0/">cc by-sa</a> {{ site.pub_year }} {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}">{{ site.author }}</a>{% else %}{{ site.author }}{% endif %}
+          {{ site.pub_year }} {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}">{{ site.author }}</a>{% else %}{{ site.author }}{% endif %}
         </div>
         <div class="col-md">
           {% if site.search == true %}
