modify slides of toc

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -15,7 +15,7 @@
                     </a> <br>
                         <small> speaker: {{ section.presenter }}</small>
                         <small>| time: {{ section.time }}</small>
-                        <small href="{{page.slides}}">| Download Slides</small>
+                        <small>| <a href="{{page.slides}}">slides</a></small>
                     </li>
                     {% endif %}
                     {%- endfor -%}
