--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -15,7 +15,7 @@
                     </a> <br>
                         <small> Speaker: {{ section.presenter }}</small>
                         <small>| Time: {{ section.time }}</small>
-                        <small>| <a href="{{page.slides}}">Slides</a></small>
+                        <small>| <a href="{{section.slides}}">Slides</a></small>
                     </li>
                     {% endif %}
                     {%- endfor -%}
