add italic to discussion

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -21,7 +21,7 @@
 
                     {% if section.discussion %}
                     <li>
-                        <a> {{ section.title }}</a> <br>
+                        <i> {{ section.title }}</i> <br>
                         <small> Time: {{ section.time }}</small>
                         {% if section.recording %}
                         <small>| <a href="{{section.recording}}">Recording</a></small>
