--- a/_includes/template/head.html
+++ b/_includes/template/head.html
@@ -5,7 +5,7 @@
 <meta name="description" content="{% if page.description %}{{ page.description | escape }}{% else %}{{ site.description | escape }}{% endif %}">
 <meta name="keywords" content="{% if page.topics %}{{ page.topics | escape }}{% else %}{{ site.keywords | escape }}{% endif %}">
 <meta name="author" content="{{ site.author | escape }}">
-<link rel="icon" type="image/png" href="{{ '/favicon.png' | absolute_url }}">
+<link rel="icon" type="image/png" href="{{ '/favicon.svg' | absolute_url }}">
 
 <!--
   _      __         __        __           ______               __     __     
