--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -3,9 +3,9 @@
 {% endcomment %}
 <div class="row justify-content-center">
     <div class="m-3 col-12" >
-        <div class="card border-light">
+        <div class="card border-info">
             <div class="card-body">
-                <h3 class="h4 card-title">Schedule:</h3>
+                <!-- <h3 class="h4 card-title">Schedule:</h3> -->
                 <ul>
                     {% for section in site.html_pages %}
                     {% if section.presenter %}
