--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,10 +5,10 @@
     <div class="m-3 col-12" >
         <div class="card border-info">
             <div class="card-body">
-                <ul>
-                    <small>X. Zhang, X. Li, W. Sultani, Y. Zhou, and S. Wshah, “Cross-View Geo-Localization via Learning Disentangled Geometric Layout Correspondence,” AAAI, vol. 37, no. 3, pp. 3480–3488, Jun. 2023, doi: 10.1609/aaai.v37i3.25457.</small><br>
-                    <small>X. Zhang, W. Sultani, and S. Wshah, “Cross-View Image Sequence Geo-Localization,” presented at the Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision, 2023, pp. 2914–2923.</small><br>
-                    <small>A. Arrabi, X. Zhang, W. Sultani, C. Chen, and S. Wshah, “Cross-View Meets Diffusion: Aerial Image Synthesis with Geometry and Text Guidance,” Aug. 20, 2024, arXiv: arXiv:2408.04224. doi: 10.48550/arXiv.2408.04224.</small><br>
+                <ul style="list-style-type:disc">
+                    <li><small>X. Zhang, X. Li, W. Sultani, Y. Zhou, and S. Wshah, “Cross-View Geo-Localization via Learning Disentangled Geometric Layout Correspondence,” AAAI, vol. 37, no. 3, pp. 3480–3488, Jun. 2023, doi: 10.1609/aaai.v37i3.25457.</small></li><br>
+                    <li><small>X. Zhang, W. Sultani, and S. Wshah, “Cross-View Image Sequence Geo-Localization,” presented at the Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision, 2023, pp. 2914–2923.</small></li><br>
+                    <li><small>A. Arrabi, X. Zhang, W. Sultani, C. Chen, and S. Wshah, “Cross-View Meets Diffusion: Aerial Image Synthesis with Geometry and Text Guidance,” Aug. 20, 2024, arXiv: arXiv:2408.04224. doi: 10.48550/arXiv.2408.04224.</small></li><br>
                 </ul>
             </div>
         </div>
