--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -9,6 +9,11 @@
                     <li><small>X. Zhang, X. Li, W. Sultani, Y. Zhou, and S. Wshah, “Cross-View Geo-Localization via Learning Disentangled Geometric Layout Correspondence,” AAAI, vol. 37, no. 3, pp. 3480–3488, Jun. 2023, doi: 10.1609/aaai.v37i3.25457.</small></li>
                     <li><small>X. Zhang, W. Sultani, and S. Wshah, “Cross-View Image Sequence Geo-Localization,” presented at the Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision, 2023, pp. 2914–2923.</small></li>
                     <li><small>A. Arrabi, X. Zhang, W. Sultani, C. Chen, and S. Wshah, “Cross-View Meets Diffusion: Aerial Image Synthesis with Geometry and Text Guidance,” Aug. 20, 2024, arXiv: arXiv:2408.04224. doi: 10.48550/arXiv.2408.04224.</small></li>
+                    <li><small>N. C. Mithun, K. S. Minhas, H.-P. Chiu, T. Oskiper, M. Sizintsev, S. Samarasekera, and R. Kumar, “Cross-View Visual Geo-Localization for Outdoor Augmented Reality,” in 2023 IEEE Conference Virtual Reality and 3D User Interfaces (VR), Mar. 2023, pp. 493–502. doi: 10.1109/VR55154.2023.00064.</small></li>
+                    <li><small>X. Zhang, X. Li, W. Sultani, C. Chen, and S. Wshah, “GeoDTR+: Toward Generic Cross-View Geolocalization via Geometric Disentanglement,” IEEE Transactions on Pattern Analysis and Machine Intelligence, pp. 1–19, 2024, doi: 10.1109/TPAMI.2024.3443652.</small></li>
+                    <li><small>D. Wilson, X. Zhang, W. Sultani, and S. Wshah, “Image and Object Geo-Localization,” Int J Comput Vis, vol. 132, no. 4, pp. 1350–1392, Apr. 2024, doi: 10.1007/s11263-023-01942-3.</small></li>
+                    <li><small>M. Chu, Z. Zheng, W. Ji, T. Wang, and T.-S. Chua, “Towards Natural Language-Guided Drones: GeoText-1652 Benchmark with Spatial Relation Matching”.</small></li>
+                    <li><small>Z. Zheng, Y. Wei, and Y. Yang, “University-1652: A Multi-view Multi-source Benchmark for Drone-based Geo-localization,” in Proceedings of the 28th ACM International Conference on Multimedia, in MM ’20. New York, NY, USA: Association for Computing Machinery, Oct. 2020, pp. 1395–1403. doi: 10.1145/3394171.3413896.</small></li>
                 </ul>
             </div>
         </div>
