--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -3,7 +3,7 @@
 {% endcomment %}
 <div class="row justify-content-center">
     <div class="m-3 col-12" >
-        <div class="card border-info">
+        <div class="card border-secondary">
             <div class="card-body">
                 <ul style="list-style-type:disc">
                     <li><small>X. Zhang, X. Li, W. Sultani, Y. Zhou, and S. Wshah, “Cross-View Geo-Localization via Learning Disentangled Geometric Layout Correspondence,” AAAI, vol. 37, no. 3, pp. 3480–3488, Jun. 2023, doi: 10.1609/aaai.v37i3.25457.</small></li>
