--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -3,7 +3,7 @@
 {% endcomment %}
 <div class="row justify-content-center">
     <div class="m-3 col-12" >
-        <div class="card border-primary">
+        <div class="card border-secondary">
             <div class="card-body">
                 <!-- <h3 class="h4 card-title">Schedule:</h3> -->
                 <ul>
