add coffee break and rearrange order

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -19,7 +19,7 @@
                     </li>
                     {% endif %}
 
-                    {% if section.discussion %}
+                    {% if section.NoLink %}
                     <li>
                         <h> {{ section.title }}</h> <br>
                         <small> Time: {{ section.time }}</small>
