--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -10,19 +10,21 @@
                     {% for section in site.html_pages %}
                     {% if section.presenter %}
                     <li>
+                        <h>Time: {{ section.time }}</h>
                         <a href="{{ section.url | relative_url }}">
                         {{ section.title }}
                     </a> <br>
                         <small> Speaker: {{ section.presenter }}</small>
-                        <small>| Time: {{ section.time }}</small>
+                        <!-- <small>| Time: {{ section.time }}</small> -->
                         <small>| <a href="{{section.slides}}">Slides</a></small>
                     </li>
                     {% endif %}
 
                     {% if section.NoLink %}
                     <li>
+                        <h>Time: {{ section.time }}</h>
                         <h> {{ section.title }}</h> <br>
-                        <small> Time: {{ section.time }}</small>
+                        <!-- <small> Time: {{ section.time }}</small> -->
                         {% if section.recording %}
                         <small>| <a href="{{section.recording}}">Recording</a></small>
                         {% endif %}
