remove br in recording

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -23,7 +23,7 @@
                     {% if section.NoLink %}
                     <li>
                         <h>{{ section.time }}: </h>
-                        <h> {{ section.title }}</h> <br>
+                        <h> {{ section.title }}</h>
                         <!-- <small> Time: {{ section.time }}</small> -->
                         {% if section.recording %}
                         <small>| <a href="{{section.recording}}">Recording</a></small>
