add recording tag in schedule

--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -17,6 +17,7 @@
                         <small> Speaker: {{ section.presenter }}</small>
                         <!-- <small>| Time: {{ section.time }}</small> -->
                         <small>| <a href="{{section.slides}}">Slides</a></small>
+                        <small>| <a href="{{section.recording}}">Recording</a></small>
                     </li>
                     {% endif %}
 
