--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -43,9 +43,6 @@
 <div class="row justify-content-center">
     <div class="m-3 col-12 col-md-10">
         <div class="card border-0 shadow-lg rounded-4">
-            <div class="card-header bg-dark text-white text-center rounded-top-4">
-                <h3 class="mb-0">📅 Event Schedule</h3>
-            </div>
             <div class="card-body p-4">
                 <ul class="list-group list-group-flush">
                     {% for section in site.html_pages %}
@@ -69,12 +66,12 @@
                                 <div>
                                     {% if section.slides %}
                                         <a href="{{ section.slides }}" class="btn btn-outline-primary btn-sm me-2">
-                                            📄 Slides
+                                            Slides
                                         </a>
                                     {% endif %}
                                     {% if section.recording %}
                                         <a href="{{ section.recording }}" class="btn btn-outline-danger btn-sm">
-                                            🎥 Recording
+                                            Recording
                                         </a>
                                     {% endif %}
                                 </div>
