--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -41,7 +41,7 @@
     Auto-generated schedule with enhanced styling
 {% endcomment %}
 <div class="row justify-content-center">
-    <div class="m-3 col-12 col-md-10">
+    <div class="m-3 col-12 col-lg-9">
         <div class="card border-0 shadow-lg rounded-4">
             <div class="card-body p-4">
                 <ul class="list-group list-group-flush">
@@ -60,7 +60,7 @@
                                         {% endif %}
                                     </h5>
                                     {% if section.presenter %}
-                                        <p class="mb-1 text-muted">🎤 Speaker: <strong>{{ section.presenter }}</strong></p>
+                                        <p class="mb-1 text-muted">Speaker: <strong>{{ section.presenter }}</strong></p>
                                     {% endif %}
                                 </div>
                                 <div>
